<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="app_name">Beaver Gang Counter</string>
    <string name="banner_ad_unit_help">ca-app-pub-6471718659740946/1198293311</string>
    <string name="banner_ad_unit_players">ca-app-pub-6471718659740946/6062361310</string>
    <string name="banner_ad_unit_stats">ca-app-pub-6471718659740946/4585628114</string>
    <string name="help1">Each player has in front of four closed cards with values ​​from 0-9. During the game, players try to collect cards with small value and avoid those that are of great value. They should also remember the values ​​of cards, which are moved subsequently, and after a while no card is not where it was originally. nTo the end of each round, each player opens his cards and adds their values. The total recorded in the block score. The player with smaller total points after a number of rounds is a winner.</string>
    <string name="help10">Two Opportunities\10T player picks up the card from the top of stack and looks. If he likes, he can use it with any of the ways described in Action B and his turn ends. If not, he can discard the card and draw another from the stack. He must use this second card in any of the ways described in Action B. </string>
    <string name="help11">Exchange\10The player takes one of his four cards face down and exchange it with one of the cards of another player. The players may not see any of the two cards. </string>
    <string name="help12">\10Important note:\10Special Cards have no values. If a special card is one of the four cards of a player at the end of a round, he must replace it with another card from the stack. \10If he pulls another special card, he continues to draw until he finds a card with value. If a player has more than one special cards, he must replace all. </string>
    <string name="help13">If a player at the end of his turn believes that the total value of his cards is quite low, he hits the table and says End of Round.» \10\10Note: \10It is not allowed from anyone to hit the table if all the players has played at least one time. When a player hit the table, all the other players play one last time before finishing the round. The player who hit the table does not play another time. \10\10After that all players open their four cards and add their values. Remember special cards must be replaced with cards of the stack. If more than one player has special cards they must replace them in a clockwise direction, starting from the player who hit the table. </string>
    <string name="help14">Jenny has 11 points (4 + 2 + 0 + 5). Alice has seven points. Dinos has a special card. He replace the card with one from the top of the stack (8). Finally he has 12 points (0 + 4 + 8 + 0).</string>
    <string name="help15">The score of each player noted in Points block. Then mix all the cards to start a new round. The game continues for as many rounds as the number of the players. Exception: in game with two players, you play four rounds. The player with the lowest score after last round is the winner</string>
    <string name="help2">The oldest player shuffles all cards and deals four to each player. All players must place their cards closed in front of them on the table, next to each other, without seeing them (do not cheat!)</string>
    <string name="help3">Place the remaining cards on the table in a closed stack. Take the first card of the stack and place it open next to it: it is the first of shoddy card. \10Each player must now peek the leftmost and the rightmost of the four cards and try to memorize their values. \10\10Note: \10There is a possibility for some players to have special cards not only at the duration of the game but also at the end of it. What happens to those described in Special Cards chapter. </string>
    <string name="help4">The player to the left of the oldest player begins and others follow clockwise. In every round, a player must choose one of the following actions (A or B).</string>
    <string name="help5">\10Action Α:\10 The player takes the open card from the top of the scrap and exchange it with one of the owned four cards. The player can freely decide which of the four cards will exchange, however is not allowed to see her. The exchanged card placed open at the top of the scrap. \10Note: \10If the first card of the scrap is a special card, the player cannot take her. In this case player must select the action B. </string>
    <string name="help6">Jenny takes the card from the top of scrap (value 2) and exchanges with one of its own (second from left). Places the card open at the top of scrap. After the exchange are still four cards face down in front of Jenny.</string>
    <string name="help7">\10Action Β:\10The player takes the card from the top of the closed stack and looks. Now he has three options from which he must choose one \10• He may discard the card, ie. to place the card open in the scrap \10• If the card is not a special card he can exchange it with one from his closed cards. \10• If the card is a special card he may use her and do what the card says. \10\10Note:\10Of course if player does not want to use a special card, can put it to the top of the scrap. In this case the card cannot be used by other players. \10\10When a player finish his action then it is the turn of the next player. If the stack runs out during the game then mix the stack and put it again on table closed. </string>
    <string name="help8">A player who pull a special card from the stack due to action B, can execute a special action. Once executed, the card is placed at the scrap.</string>
    <string name="help9">Glance\10The player can pick up and look one of the four closed the cards. After that he returns the card to the closed position. </string>
    <string name="help_title1">GAME GENERAL</string>
    <string name="help_title2">PREPARATION</string>
    <string name="help_title3">HOW TO PLAY THE GAME</string>
    <string name="help_title4">SPECIAL CARDS</string>
    <string name="help_title5">THE END OF A ROUND</string>
    <string name="help_title6">THE END OF THE GAME</string>
    <string name="str_act_game">NEW GANE</string>
    <string name="str_act_help">HELP</string>
    <string name="str_act_players">PLAYERS</string>
    <string name="str_act_stats">STATISTICS</string>
    <string name="str_cancel">CANCEL</string>
    <string name="str_cancel_game">There is a game in progress. Do you want to cancel?</string>
    <string name="str_close">CLOSE</string>
    <string name="str_contact">Contact: </string>
    <string name="str_delete">DELETE</string>
    <string name="str_details">This application eliminates the need of having paper and pencil with us. It is used to record the points of every round of the game. \10\10Characteristics: \10• Ability to record points for each game round \10• Save and view various statistics for each player \10• Ability to add up to 12 players in the game \10\10!!!Note: \10The game is played normally with 2-6 players. In the application there is a choice of up to 12 players because there are many who play with more people with double deck using looser gambling rules. </string>
    <string name="str_edit">Edit</string>
    <string name="str_empty_name">You have not filled a name!!!</string>
    <string name="str_game_finished">The game is finished!!!</string>
    <string name="str_max_players_selection">You cannot select more than 12 players!!!</string>
    <string name="str_name_hint">Name</string>
    <string name="str_new_game">NEW GAME</string>
    <string name="str_new_player">New player</string>
    <string name="str_no">NO</string>
    <string name="str_ok">OK</string>
    <string name="str_old_game_promt">There is an unsaved game. Do you want to continue?</string>
    <string name="str_save">SAVE</string>
    <string name="str_select_players">Select the players</string>
    <string name="str_start">START</string>
    <string name="str_two_players_selection">You must select at least 2 players!!!</string>
    <string name="str_version_number">Version: </string>
    <string name="str_winner">Winner: </string>
    <string name="str_yes">YES</string>
    <string name="str_zero">0</string>
    <string name="accept">Accept</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
</resources>
