<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/colorGreen" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:layout_above="@+id/adView" android:layout_alignParentTop="true">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/textSize" android:textStyle="bold" android:textColor="@android:color/holo_orange_light" android:gravity="center" android:id="@+id/textView" android:background="@android:color/holo_red_light" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_title1"/>
            <TextView android:textSize="@dimen/textSizeSmall" android:id="@+id/textView2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/help1"/>
            <TextView android:textSize="@dimen/textSize" android:textStyle="bold" android:textColor="@android:color/holo_orange_light" android:gravity="center" android:id="@+id/textView3" android:background="@android:color/holo_red_light" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/help_title2"/>
            <TextView android:textSize="@dimen/textSizeSmall" android:id="@+id/textView4" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/help2"/>
            <ImageView android:layout_gravity="center_horizontal" android:id="@+id/imageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/image1"/>
            <TextView android:textSize="@dimen/textSizeSmall" android:id="@+id/textView5" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help3"/>
            <TextView android:textSize="@dimen/textSize" android:textStyle="bold" android:textColor="@android:color/holo_orange_light" android:gravity="center" android:id="@+id/textView6" android:background="@android:color/holo_red_light" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/help_title3"/>
            <TextView android:textSize="@dimen/textSizeSmall" android:id="@+id/textView7" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/help4"/>
            <TextView android:textSize="@dimen/textSizeSmall" android:id="@+id/textView8" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help5"/>
            <ImageView android:layout_gravity="center_horizontal" android:id="@+id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/image2"/>
            <TextView android:textSize="@dimen/textSizeSmall" android:textColor="@android:color/holo_orange_dark" android:id="@+id/textView9" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help6"/>
            <TextView android:textSize="@dimen/textSizeSmall" android:id="@+id/textView10" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help7"/>
            <TextView android:textSize="@dimen/textSize" android:textStyle="bold" android:textColor="@android:color/holo_orange_light" android:gravity="center" android:id="@+id/textView11" android:background="@android:color/holo_red_light" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/help_title4"/>
            <TextView android:textSize="@dimen/textSizeSmall" android:id="@+id/textView16" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/help8"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp">
                <ImageView android:layout_gravity="center_horizontal" android:id="@+id/imageView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/image3"/>
                <TextView android:textSize="@dimen/textSizeSmall" android:id="@+id/textView12" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help9"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp">
                <ImageView android:layout_gravity="center_horizontal" android:id="@+id/imageView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/image4"/>
                <TextView android:textSize="@dimen/textSizeSmall" android:id="@+id/textView13" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help10"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp">
                <ImageView android:layout_gravity="center_horizontal" android:id="@+id/imageView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/image5"/>
                <TextView android:textSize="@dimen/textSizeSmall" android:id="@+id/textView14" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help11"/>
            </LinearLayout>
            <TextView android:textSize="@dimen/textSizeSmall" android:id="@+id/textView15" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/help12"/>
            <TextView android:textSize="@dimen/textSize" android:textStyle="bold" android:textColor="@android:color/holo_orange_light" android:gravity="center" android:id="@+id/textView17" android:background="@android:color/holo_red_light" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/help_title5"/>
            <TextView android:textSize="@dimen/textSizeSmall" android:id="@+id/textView18" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/help13"/>
            <ImageView android:layout_gravity="center_horizontal" android:id="@+id/imageView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/image6"/>
            <TextView android:textSize="@dimen/textSizeSmall" android:textColor="@android:color/holo_orange_dark" android:id="@+id/textView19" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help14"/>
            <TextView android:textSize="@dimen/textSize" android:textStyle="bold" android:textColor="@android:color/holo_orange_light" android:gravity="center" android:id="@+id/textView20" android:background="@android:color/holo_red_light" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/help_title6"/>
            <TextView android:textSize="@dimen/textSizeSmall" android:id="@+id/textView21" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/help15"/>
        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView android:id="@+id/adView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" app:adSize="SMART_BANNER" app:adUnitId="@string/banner_ad_unit_help"/>
</RelativeLayout>
